--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ ClientFramework.sln
 */*.sln
 GameClient/Framework/ProjectSettings/ProjectVersion.txt
 GameClient/Framework/ProjectSettings/ProjectVersion.txt
+GameClient/Framework/ProjectSettings/ProjectVersion.txt
