--- a/GameClient/Framework/Assets/ThirdPartyLibraries/Assets/Editor/GameAssets.Editor.asmdef
+++ b/GameClient/Framework/Assets/ThirdPartyLibraries/Assets/Editor/GameAssets.Editor.asmdef
@@ -2,8 +2,10 @@
     "name": "GameAssets.Editor",
     "references": [
         "GUID:2e7ee367bd693494daefdd95fe5c5c0f",
+        "GUID:64db44c30a4e5454ca73b62ef0d127a5",
         "GUID:8c08cd3b08dd4894980e53c63c714136",
-        "GUID:64db44c30a4e5454ca73b62ef0d127a5"
+        "GUID:5cc946686df574b0cab70b7d8bfbc39e",
+        "GUID:981022a2f47254f27b80f8d35c3ebaef"
     ],
     "includePlatforms": [
         "Editor"
