--- a/GameClient/Framework/Assets/ThirdPartyLibraries/Assets/GameAssets.asmdef
+++ b/GameClient/Framework/Assets/ThirdPartyLibraries/Assets/GameAssets.asmdef
@@ -2,7 +2,8 @@
     "name": "GameAssets",
     "references": [
         "GUID:8c08cd3b08dd4894980e53c63c714136",
-        "GUID:64db44c30a4e5454ca73b62ef0d127a5"
+        "GUID:64db44c30a4e5454ca73b62ef0d127a5",
+        "GUID:981022a2f47254f27b80f8d35c3ebaef"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
