修改网络问题

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ GameClient/Framework/ProjectSettings/ProjectVersion.txt
 GameClient/Framework/ProjectSettings/ProjectVersion.txt
 GameClient/Framework/.vscode/settings.json
 GameClient/Framework/AssetBundles/
+GameClient/Framework/DownloadAssets/
+
+
