BestHttp2 修改成原生的

--- a/GameClient/Framework/Assets/ThirdPartyLibraries/Best HTTP/BestHTTP.asmdef
+++ b/GameClient/Framework/Assets/ThirdPartyLibraries/Best HTTP/BestHTTP.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "BestHTTP",
-    "references": [],
+    "references": [
+        "GUID:981022a2f47254f27b80f8d35c3ebaef"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
