--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,6 @@ GameClient/Framework/ProjectSettings/ProjectVersion.txt
 GameClient/Framework/.vscode/settings.json
 GameClient/Framework/AssetBundles/
 GameClient/Framework/DownloadAssets/
+GameClient/Framework/Assets/StreamingAssets/
 
 
