--- a/GameClient/Framework/Assets/ThirdPartyLibraries/Assets/Editor/GameAssets.Editor.asmdef
+++ b/GameClient/Framework/Assets/ThirdPartyLibraries/Assets/Editor/GameAssets.Editor.asmdef
@@ -5,7 +5,8 @@
         "GUID:64db44c30a4e5454ca73b62ef0d127a5",
         "GUID:8c08cd3b08dd4894980e53c63c714136",
         "GUID:5cc946686df574b0cab70b7d8bfbc39e",
-        "GUID:981022a2f47254f27b80f8d35c3ebaef"
+        "GUID:981022a2f47254f27b80f8d35c3ebaef",
+        "GUID:9069ac25d95ca17448a247f3bb1c769f"
     ],
     "includePlatforms": [
         "Editor"
