修改打表文件位置

--- a/GameClient/Framework/Assets/GameLogic/GameLogic.asmdef
+++ b/GameClient/Framework/Assets/GameLogic/GameLogic.asmdef
@@ -7,7 +7,8 @@
         "GUID:2e7ee367bd693494daefdd95fe5c5c0f",
         "GUID:981022a2f47254f27b80f8d35c3ebaef",
         "GUID:77b640ebe03a1194598db26ced37dd6e",
-        "GUID:038a05803effd40daa5d6762a434a932"
+        "GUID:038a05803effd40daa5d6762a434a932",
+        "GUID:b2a1944b67b93418fa8ae457a4f17440"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
