--- a/GameClient/Framework/Assets/GameLogic/GameLogic.asmdef
+++ b/GameClient/Framework/Assets/GameLogic/GameLogic.asmdef
@@ -8,7 +8,8 @@
         "GUID:981022a2f47254f27b80f8d35c3ebaef",
         "GUID:77b640ebe03a1194598db26ced37dd6e",
         "GUID:038a05803effd40daa5d6762a434a932",
-        "GUID:b2a1944b67b93418fa8ae457a4f17440"
+        "GUID:b2a1944b67b93418fa8ae457a4f17440",
+        "GUID:f3373c75fa3c9ca4e8e0dae85e46f66f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
